--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -65,6 +65,8 @@ header {
     color: white;
   }
 }
+
+//   قسمت succer club//
 .your-club-parent {
   position: relative;
   display: flex;
@@ -107,7 +109,7 @@ header {
 #home {
   background: rgba(229, 229, 229, 0.25);
   text-align: center;
-  min-height: 80vh;
+  min-height: 100vh;
 
   h1 {
     font-size: 48px;
@@ -120,13 +122,13 @@ header {
   flex-direction: column;
   width: 100%;
   align-items: center;
-  min-height: 80vh;
+  min-height: 100vh;
   background: rgba(229, 229, 229, 0.25);
   h1 {
     font-size: 48px;
     color: $accent-color;
   }
-
+  // استایل جعبه و div این\وت داخل جعبه
   .soccer-input {
     overflow-x: hidden;
     border-radius: 10px;
@@ -135,7 +137,9 @@ header {
     max-height: 40vh;
     position: relative;
     width: 40vw;
-    border-radius: 15px;
+    max-width: 650px;
+    border-radius: 25px;
+    padding: 5px;
 
     img {
       background: hsla(72, 100%, 68%, 1);
@@ -146,6 +150,7 @@ header {
       border-bottom: 1px solid hsla(72, 100%, 68%, 1);
       padding: 1rem 0;
       cursor: pointer;
+      border-left: 1px solid hsla(72, 100%, 68%, 0.75);
       &:hover {
         transform: scale(1.05);
       }
@@ -157,18 +162,13 @@ header {
       justify-content: space-between;
       align-items: center;
       position: sticky;
-      top: 0;
-      background: $accent-color;
-      border: 4px solid hsla(72, 100%, 68%, 1);
+      position: relative;
       border-radius: 25px;
       input {
         border: none;
         background: transparent;
-
-        color: hsla(72, 100%, 68%, 1);
-        &::placeholder {
-          color: hsla(72, 100%, 68%, 1);
-        }
+        outline: none;
+        margin-left: 1rem;
       }
     }
   }
